Firefox bug fix : align header items.

--- a/app/src/styles/override.css
+++ b/app/src/styles/override.css
@@ -146,3 +146,8 @@ a {
 .auth0-lock.auth0-lock .auth0-lock-header {
     color: #ffffff !important;
 }
+
+
+.mdc-toolbar__section {
+    align-items: center !important;
+}
